---
Veretino 0.6.2
* Improved display of the subfolder content statuses.
* The names of some item statuses are simplified.
* Fixed the false response to filtered symlinks during parsing.

---
Veretino 0.6.1
Compatibility with older OS, such as Ubuntu 22.04, has been implemented.

---
Veretino 0.6.0
What's new:
* Improved database storage format. Now files with the *.ver extension are compressed.
* When working with non-writable folders, the location of the database file is now user-selectable.
    (previously it was saved to the Desktop)
* More reliable database saving process.
* More accurate detection of the presence of a checksum string in the clipboard.
* Added support for checking using the outdated (but still used) MD5 algorithm.
* Added the ability to exclude shortcuts and symbolic links from the list of files.
* Added the ability to paste checksums from the clipboard into the database. (For advanced users only!)
    Available for 'New-status' items if the option is enabled in the settings.

Internal changes:
* The way of processing JSON file data has been redesigned.
* The file filtering system now has attributes.
* Improved processing of the file types list.
* Switched to CMake-only.

---
Veretino 0.5.2
* Implemented the ability to detect Moved files.
    Added item Status: "Moved". It will mark renamed or moved files [if enabled in settings].
    An item will be marked with the "Moved" status if its computed checksum matches any Missing item's one.
* Implemented the ability to Import checksums from existing Branches (subfolder databases) and Digest files.
    This can only be done for New Items. Once completed, they are assigned a new status: Imported.
    Further work with them is no different from parsed ones.
* DateTime stamp inheritance during Branching has become a bit smarter.
    If the selected subfolder contains only checked and matched items, the Branch will be created with a new timestamp, as a new DB.