@@ -96,7 +96,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="l_sep">
         <property name="text">
          <string>|</string>
         </property>
