@@ -3,6 +3,7 @@ Veretino 0.6.2
 * Improved display of the subfolder content statuses.
 * The names of some item statuses are simplified.
 * Fixed the false response to filtered symlinks during parsing.
+* Folder Contents dialog: if all files are selected, the red 'no files' label is no longer displayed.
 
 ---
 Veretino 0.6.1
